# VeilScan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
tests/: generate_fixtures.py  test_veilscan.py
veilscan/: __init__.py  cli.py
veilscan/core/: batch.py  magic.py  mitre.py  models.py  scanner.py
veilscan/detectors/: divergence.py  llm_judge.py  patterns.py  unicode_layer.py
veilscan/extractors/: base.py  docx.py  pdf.py  pptx.py  xlsx.py
veilscan/reporting/: html.py  pdf.py  terminal.py
veilscan/sanitizer/: deep.py  pdf_sanitizer.py
